--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "feds.js",
   "version": "0.0.1",
   "description": "A lightweight library for interacting with Feds.lol's API",
+  "private": false,
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
