--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "module": "./dist/index.mjs",
     "types": "./dist/index.d.ts",
     "scripts": {
+        "test": "nodemon --exec ts-node --files test/test.ts",
         "format": "prettier --write \"**/*.{js,ts,md}\"",
         "lint": "tsc",
         "lint:eslint": "eslint . --ext .js,.ts",
