--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
         "@typescript-eslint/eslint-plugin": "^6.19.0",
         "@typescript-eslint/parser": "^6.19.0",
         "eslint": "^8.56.0",
+        "nodemon": "^3.0.3",
         "prettier": "^3.2.4",
+        "ts-node": "^10.9.2",
         "tsup": "^8.0.1",
         "typescript": "^5.3.3"
     }
